forth/test/fail/test_switch_no_case_input_body.af
\ Must fail to compile.
\ This currently fails via no-unused-locals validation, not a switch-specific
\ contract. Switch with no case is useless, but language needn't promise this
\ exact diagnostic forever.
fun: test_switch_no_case_input_body_fail { val key -- out0 out1 }
  val key switch 30 end
end
